[package]
name = "pbr"
version = "1.0.1"
authors = ["Ariel Mashraki <ariel@mashraki.co.il>", "Steven Fackler <sfackler@gmail.com>"]
description = "Console progress bar for Rust"
documentation = "http://a8m.github.io/pb/doc/pbr/index.html"
repository = "https://github.com/a8m/pb"
keywords = ["cli", "progress", "terminal", "pb"]
license = "MIT"
edition = "2018"

[dependencies]
libc = "0.2.47"
time = "0.1.42"
crossbeam = "0.6.0"
parking_lot = "0.7.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.6", features = ["processenv", "winbase", "wincon"] }

[target.'cfg(target_os = "redox")'.dependencies]
termion = "1.5.1"

[dev-dependencies]
rand = "0.6.4"
